# pyawsutils

./: CHANGELOG.md  MANIFEST.in  README.md  pypi.md  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py  index.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pyawsutils.html  search.html  searchindex.js
docs/_sources/: pyawsutils.rst.txt
